// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-dmqHEY ItQyv"
  >
    <a
      class="sc-beqWay gPVrXJ"
      href="/some/path"
    >
      <div
        class="sc-hLseeT cYtryv"
      >
        <img
          src=""
        />
        
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-dmqHEY ItQyv"
  >
    <div
      class="sc-gueYod fOHbWb"
    >
      <div
        class="sc-hLseeT cYtryv"
      >
        <img
          src=""
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-dmqHEY ItQyv"
  >
    <div
      class="sc-gueYod fOHbWb"
    >
      <div
        class="sc-hLseeT cYtryv"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
